login page and scale with two elements

--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
                 </div>
                 <div class="notification-cont">
                     <a href="#" class="notification-icon active"></a>
+                    <div class="exit-wrap">
+                        <a href="#">
+                            <div class="exit-icon"></div>
+                            <div class="exit-text">
+                                Выйти
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="page-content">
