--- a/login.html
+++ b/login.html
@@ -31,10 +31,13 @@
                         Нет аккаунта? <a href="./registration.html" class="bold">Зарегестрируйтесь</a>
                     </div>
                     <div class="login-input">
-                        <input type="text" name="q-1" placeholder="Имя" data-reqired>
+                        <input type="email" name="q-1" placeholder="Имя" data-reqired>
                     </div>
                     <div class="login-input">
-                        <input type="email" name="q-1" placeholder="Введите еmail" data-reqired>
+                        <input type="password" name="q-1" placeholder="Введите еmail" data-reqired>
+                    </div>
+                    <div class="login-error">
+                        неправильный логин или пароль
                     </div>
                     <div class="btns-cont">
                         <div class="btn-cont">
