mobile version for survey page

--- a/thanks.html
+++ b/thanks.html
@@ -19,6 +19,7 @@
     <div class="page-wrap">
         <div class="content-wrap survey-page">
             <div class="pool-wrap">
+                <div class="pool-bg" style="background-image: url('./img/pool-bg.jpg');"></div>
                 <div class="thanks-wrap">
                     <div class="thanks-text">
                         <div class="text-big">
