add matrix question

--- a/survey.html
+++ b/survey.html
@@ -325,6 +325,83 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="question-wrap question-matrix" data-id="10">
+                            <div class="question-name">
+                                Введите ваш вопрос
+                            </div>
+                            <div class="matrix-table">
+                                <table>
+                                    <tr>
+                                        <td></td>
+                                        <td>Текст столбца</td>
+                                        <td>Текст столбца</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Текст строки</td>
+                                        <td>
+                                            <div class="matrix-check">
+                                                <input type="radio" name="q_10_1" id="q_10_1_1">
+                                                <label for="q_10_1_1"></label>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <div class="matrix-check">
+                                                <input type="radio" name="q_10_1" id="q_10_1_2">
+                                                <label for="q_10_1_2"></label>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Текст строки</td>
+                                        <td>
+                                            <div class="matrix-check">
+                                                <input type="radio" name="q_10_2" id="q_10_2_1">
+                                                <label for="q_10_2_1"></label>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <div class="matrix-check">
+                                                <input type="radio" name="q_10_2" id="q_10_2_2">
+                                                <label for="q_10_2_2"></label>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Текст строки</td>
+                                        <td>
+                                            <div class="matrix-check">
+                                                <input type="radio" name="q_10_3" id="q_10_3_1">
+                                                <label for="q_10_3_1"></label>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <div class="matrix-check">
+                                                <input type="radio" name="q_10_3" id="q_10_3_2">
+                                                <label for="q_10_3_2"></label>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="question-wrap question-scale" data-id="11">
+                            
+                            <div class="question-name">
+                                Введите ваш вопрос
+                            </div>
+                            <div class="diapason-answer">
+                                <div class="diapason">
+                                    <div class="label">
+                                        <div class="value">0</div>
+                                    </div>
+                                    <div class="input-box">
+                                        <input class="input-range" type="range" min="1" max="10" step="1" value="0"/>
+                                        <div class="bar"></div>
+                                        <div class="bar-filled"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="btn-wrap">
                             <button class="valid-form-send btn-default">Отправить</button>
                         </div>
