--- a/survey.html
+++ b/survey.html
@@ -340,13 +340,13 @@
                                         <td>Текст строки</td>
                                         <td>
                                             <div class="matrix-check">
-                                                <input type="radio" name="q_10_1" id="q_10_1_1">
+                                                <input type="radio" name="q_10_1" id="q_10_1_1" data-reqired="reqired">
                                                 <label for="q_10_1_1"></label>
                                             </div>
                                         </td>
                                         <td>
                                             <div class="matrix-check">
-                                                <input type="radio" name="q_10_1" id="q_10_1_2">
+                                                <input type="radio" name="q_10_1" id="q_10_1_2" data-reqired="reqired">
                                                 <label for="q_10_1_2"></label>
                                             </div>
                                         </td>
@@ -355,13 +355,13 @@
                                         <td>Текст строки</td>
                                         <td>
                                             <div class="matrix-check">
-                                                <input type="radio" name="q_10_2" id="q_10_2_1">
+                                                <input type="radio" name="q_10_2" id="q_10_2_1" data-reqired="reqired">
                                                 <label for="q_10_2_1"></label>
                                             </div>
                                         </td>
                                         <td>
                                             <div class="matrix-check">
-                                                <input type="radio" name="q_10_2" id="q_10_2_2">
+                                                <input type="radio" name="q_10_2" id="q_10_2_2" data-reqired="reqired">
                                                 <label for="q_10_2_2"></label>
                                             </div>
                                         </td>
@@ -370,13 +370,13 @@
                                         <td>Текст строки</td>
                                         <td>
                                             <div class="matrix-check">
-                                                <input type="radio" name="q_10_3" id="q_10_3_1">
+                                                <input type="radio" name="q_10_3" id="q_10_3_1" data-reqired="reqired">
                                                 <label for="q_10_3_1"></label>
                                             </div>
                                         </td>
                                         <td>
                                             <div class="matrix-check">
-                                                <input type="radio" name="q_10_3" id="q_10_3_2">
+                                                <input type="radio" name="q_10_3" id="q_10_3_2" data-reqired="reqired">
                                                 <label for="q_10_3_2"></label>
                                             </div>
                                         </td>
@@ -395,7 +395,7 @@
                                         <div class="value">0</div>
                                     </div>
                                     <div class="input-box">
-                                        <input class="input-range" type="range" min="1" max="10" step="1" value="0"/>
+                                        <input class="input-range" type="range" min="1" max="10" step="1" />
                                         <div class="bar"></div>
                                         <div class="bar-filled"></div>
                                     </div>
