chage registration page

--- a/registration.html
+++ b/registration.html
@@ -25,7 +25,8 @@
             <div class="login-form send-form">
                 <form action="./agreement.html">
                     <div class="login-header">
-                        Здравствуйте!
+                        Приветствуем вас <br>
+                        на платформе опросов
                     </div>
                     <div class="under-header">
                         Уже есть аккаунт? <a href="./login.html" class="bold">Войдите</a>
@@ -43,7 +44,21 @@
                             </button>
                         </div>
                         <div class="btn-cont">
-                            <button class="btn-enter-google">
+                            <button class="btn-enter-google btn-enter-social">
+                                <span>
+                                    Регистрация с помощью
+                                </span>
+                            </button>
+                        </div>
+                        <div class="btn-cont">
+                            <button class="btn-enter-vk btn-enter-social">
+                                <span>
+                                    Регистрация с помощью
+                                </span>
+                            </button>
+                        </div>
+                        <div class="btn-cont">
+                            <button class="btn-enter-facebook btn-enter-social">
                                 <span>
                                     Регистрация с помощью
                                 </span>
