--- a/survey.html
+++ b/survey.html
@@ -42,7 +42,7 @@
                         Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et
                         voluptates repudiandae sint et molestiae non recusandae.
                     </p>
-                    <form action="#" class="form-valid">
+                    <form action="#" class="form-valid" autocomplete="off">
                         <div class="question-wrap question-single" data-id="1">
                             <div class="question-name">
                                 Введите ваш вопрос
@@ -146,18 +146,6 @@
                                 <div class="label-item">
                                     Понравилось невероятно
                                 </div>
-                            </div>
-                        </div>
-                        <div class="question-wrap question-dropdown" data-id="5">
-                            <div class="question-name">
-                                Введите ваш вопрос
-                            </div>
-                            <div class="dropdown-wrap">
-                                <select class="customselect" data-reqired="reqired" name="q-5" multiple>
-                                    <option value="Ответ 1">Ответ 1</option>
-                                    <option value="Ответ 2">Ответ 2</option>
-                                    <option value="Ответ 3">Ответ 3</option>
-                                </select>
                             </div>
                         </div>
                         <div class="question-wrap question-multiple" data-id="6">
@@ -400,6 +388,23 @@
                                         <div class="bar-filled"></div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="question-wrap question-dropdown" data-id="5">
+                            <div class="question-name">
+                                Введите ваш вопрос
+                            </div>
+                            <div class="dropdown-wrap">
+                                <select class="customselect" data-reqired="reqired" name="q-5" multiple>
+                                    <option value="Ответ 1">Ответ 1</option>
+                                    <option value="Ответ 2">Ответ 2</option>
+                                    <option value="Ответ 3">Ответ 3</option>
+                                    <option value="Ответ 3">Ответ 3</option>
+                                    <option value="Ответ 3">Ответ 3</option>
+                                    <option value="Ответ 3">Ответ 3</option>
+                                    <option value="Ответ 3">Ответ 3</option>
+                                    <option value="Ответ 3">Ответ 3</option>
+                                </select>
                             </div>
                         </div>
                         <div class="btn-wrap">
