--- a/registration.html
+++ b/registration.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="./font/Gilroy_2/stylesheet.css">
-    <link rel="stylesheet" href="./css/login.css?346346345">
+    <link rel="stylesheet" href="./css/login.css?45234">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
