--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
-    <link rel="stylesheet" href="./css/login.css?252462453">
+    <link rel="stylesheet" href="./css/login.css?3634534">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -36,9 +36,6 @@
                     <div class="login-input">
                         <input type="password" name="q-1" placeholder="Введите еmail" data-reqired>
                     </div>
-                    <div class="login-error">
-                        неправильный логин или пароль
-                    </div>
                     <div class="btns-cont">
                         <div class="btn-cont">
                             <button type="submit" class="btn-submit">
@@ -46,9 +43,23 @@
                             </button>
                         </div>
                         <div class="btn-cont">
-                            <button class="btn-enter-google">
+                            <button class="btn-enter-google btn-enter-social">
                                 <span>
-                                    Регистрация с помощью
+                                    Вход с помощью
+                                </span>
+                            </button>
+                        </div>
+                        <div class="btn-cont">
+                            <button class="btn-enter-vk btn-enter-social">
+                                <span>
+                                    Вход с помощью
+                                </span>
+                            </button>
+                        </div>
+                        <div class="btn-cont">
+                            <button class="btn-enter-facebook btn-enter-social">
+                                <span>
+                                    Вход с помощью
                                 </span>
                             </button>
                         </div>
