--- a/detail-form.html
+++ b/detail-form.html
@@ -60,6 +60,12 @@
                     <div class="login-input">
                         <input type="text" name="q-7" placeholder="Город" value="Москва, Россия">
                     </div>
+                    <div class="login-input">
+                        <input type="password" name="q-8" placeholder="Пароль"  data-reqired>
+                    </div>
+                    <div class="login-input">
+                        <input type="password" name="q-9" placeholder="Повторите пароль"  data-reqired>
+                    </div>
                     <div class="btns-cont">
                         <div class="btn-cont">
                             <button type="submit" class="btn-submit">
