--- a/detail-form.html
+++ b/detail-form.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./font/Gilroy_2/stylesheet.css">
     <link rel="stylesheet" href="./css/custom-select.css">
     <link rel="stylesheet" href="./css/bootstrap-datepicker3.standalone.css">
-    <link rel="stylesheet" href="./css/login.css?685764w4678">
+    <link rel="stylesheet" href="./css/login.css?346345">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
