--- a/thanks_registr.html
+++ b/thanks_registr.html
@@ -22,7 +22,7 @@
         </div>
         <div class="login-content thanks-wrap">
             <div class="img-cont">
-                <img src="./img/thnaks-registr-bg.jpg" alt="">
+                <img src="./img/thanks-registr-bg.jpg" alt="">
             </div>
             <div class="agreement-form">
                 <div class="text">
