fix grammar error

--- a/thanks_registr.html
+++ b/thanks_registr.html
@@ -33,7 +33,7 @@
                         Вы добавлены <span class="bold">в базу для опросов</span>
                     </div>
                     <div class="under-header">
-                        Прохождите тесты и зарабатывайте деньги
+                        Проходите тесты и зарабатывайте деньги
                     </div>
                 </div>
                 <div class="btn-cont">
